--- a/views/pages/exp.ejs
+++ b/views/pages/exp.ejs
@@ -6,13 +6,12 @@
     <meta name="description" content="study">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="js/jquery-1.11.3.min.js"></script>
     <title>Study</title>
 
   </head>
   <body>
     <!-- predef html resources -->
-    <div id="uberdiv">This is the landing page</div>
-    <script src="js/admin.js"></script> 
+    <div id="uberdiv">This is the study page</div>
+    <script src="js/exp.js"></script> 
   </body>
 </html>
