--- a/public/style.css
+++ b/public/style.css
@@ -3,7 +3,11 @@ body {
     color:black;
     font-size:1.5em;
 }
-
+h1 {
+    margin-left:auto;
+    margin-right:auto;
+    text-align:center;
+}
 p {
     margin-left:auto;
     margin-right:auto;
