--- a/public/style.css
+++ b/public/style.css
@@ -10,6 +10,17 @@ h1 {
 }
 p {
     margin-left:auto;
+    margin-right:auto; 
+ }
+
+.centered, trialdiv {
+    margin-left:auto;
     margin-right:auto;
     text-align:center;
+ }
+
+ button {
+     font-size:1.2em;
+     border-radius:.5em;
+     background-color:darkgrey;
  }
