--- a/views/pages/exp.ejs
+++ b/views/pages/exp.ejs
@@ -12,6 +12,7 @@
   </head>
   <body>
     <!-- predef html resources -->
+    <h1>Which triangle has the biggest area?</h1>
     <div id="uberdiv">This is the study page</div>
     <script src="js/exp.js"></script> 
   </body>
