--- a/views/pages/exp.ejs
+++ b/views/pages/exp.ejs
@@ -14,6 +14,7 @@
     <!-- predef html resources -->
     <h1>Which triangle has the biggest area?</h1>
     <div id="uberdiv">This is the study page</div>
-    <script src="js/exp.js"></script> 
+    <footer id="expfooter">This is a footer</footer>
+    <script src="js/exp.js"></script>
   </body>
 </html>
