--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -32,9 +32,11 @@ $.post("/login",{token:document.getElementById('logintextarea').value},function(
 	<p>Login key:<textarea id='logintextarea'></textarea><button onclick='login()'>Login</button></br>
 	<button id='demographicsbutton' onclick="getData('demographics')" disabled>download demographics</button></br>
 	<button id='responsesbutton' onclick="getData('responses')" disabled >download responses</button>
+	<button id='responsesbutton' onclick="getData('pairresponses')" disabled >download responses</button>
 	<%}else{%>
 	<button id='demographicsbutton' onclick="getData('demographics')">download demographics</button></br>
-	<button id='responsesbutton' onclick="getData('responses')">download responses</button>
+	<button id='responsesbutton' onclick="getData('responses')">download triad responses</button>
+	<button id='responsesbutton' onclick="getData('pairresponses')">download pair responses</button>
 	<%}%>
       </div>
   </body>
