keyboard responses stimtest

--- a/views/pages/exp.ejs
+++ b/views/pages/exp.ejs
@@ -12,9 +12,9 @@
   </head>
   <body>
     <!-- predef html resources -->
-    <h1>Which triangle has the biggest area?</h1>
+    <div id="pgtitle"></div>
     <div id="uberdiv">This is the study page</div>
-    <footer id="expfooter">This is a footer</footer>
+    <footer id="expfooter"></footer>
     <script src="js/exp.js"></script>
   </body>
 </html>
