--- a/public/style.css
+++ b/public/style.css
@@ -7,12 +7,16 @@ h1 {
     margin-left:auto;
     margin-right:auto;
     text-align:center;
+    display:inline-block;
 }
 p {
     margin-left:auto;
     margin-right:auto;
     display:block;
  }
+.kbdprompt{
+    font-size:1.2em;
+}
 
 .centered, trialdiv {
     margin-left:auto;
@@ -27,9 +31,11 @@ p {
  }
 
  div{
-     display:flex;
+     display:block;
+     text-align:center;
      justify-content:center;
-     padding:50px;
+     padding:20px;
+
      /* margin:0 auto; */
      /* left:50%; */
  }
