--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -35,9 +35,9 @@ $.post("/login",{token:document.getElementById('logintextarea').value},function(
 	<!-- <button id='responsesbutton' onclick="getData('pairresponses')" disabled >download responses</button> -->
 	<%}else{%>
 	<button id='demographicsbutton' onclick="getData('demographics')">download demographics</button></br>
-	<!-- <button id='responsesbutton' onclick="getData('responses')">download triad responses</button> -->
+	<button id='responsesbutton' onclick="getData('responses')">download triad responses</button>
 	<button id='responsesbutton' onclick="getData('pairresponses')">download pair-comparison responses</button>
-	<button id='responsesbutton' onclick="getData('matchresponses')">download pair-match responses</button>
+	<!-- <button id='responsesbutton' onclick="getData('matchresponses')">download pair-match responses</button> -->
 	<%}%>
       </div>
   </body>
