timeconditions ok, pairstotriads making progress, also, recordresponses is *hilariously wrong*

--- a/views/pages/exp_triads.ejs
+++ b/views/pages/exp_triads.ejs
@@ -12,7 +12,7 @@
   </head>
   <body>
     <!-- predef html resources -->
-    <div id="pgtitle"></div>
+    <!-- <div id="pgtitle"></div> -->
     <h1>Which triangle has the largest area?</h1>
     <div id="uberdiv">This is the study page</div></br>
     <footer id="expfooter"></footer>
